# openapi.yaml
@@ -265,7 +265,9 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/PaymentTypeInvoicesDTO'
+                type: array
+                items:
+                  $ref: '#/components/schemas/PaymentTypeInvoicesDTO'
     post:
       tags:
         - Generate
